--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,9 @@ nav ul li a {
 nav ul li a:hover {
     background-color: #ccc;
 }
+header {
+            background-color: #333;
+            color: #fff;
+            padding: 10px 0;
+            text-align: center;
+        }
